--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -1,362 +1,23 @@
-@import "./assets/scss/normalize";
+@import "node_modules/@adwp-ui/widgets/styles/lib.theme";
 
-// Media Query Ranges
-$small-screen-up: 601px !default;
-$medium-screen-up: 993px !default;
-$large-screen-up: 1201px !default;
-$small-screen: 600px !default;
-$medium-screen: 992px !default;
-$large-screen: 1200px !default;
-
-$medium-and-up: "only screen and (min-width : #{$small-screen-up})" !default;
-$large-and-up: "only screen and (min-width : #{$medium-screen-up})" !default;
-$extra-large-and-up: "only screen and (min-width : #{$large-screen-up})" !default;
-$small-and-down: "only screen and (max-width : #{$small-screen})" !default;
-$medium-and-down: "only screen and (max-width : #{$medium-screen})" !default;
-$medium-only: "only screen and (min-width : #{$small-screen-up}) and (max-width : #{$medium-screen})" !default;
-
-$num-cols: 12 !default;
-$gutter-width: 1.5rem !default;
-$element-top-margin: $gutter-width/3 !default;
-$element-bottom-margin: ($gutter-width*2)/3 !default;
-
-@import "./assets/scss/grid";
-
-body {
-  margin: 0;
-  padding: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
-  color: #ffffff;
-  background-color: #303030;
+.top-menu.mat-list-base .mat-list-item {
+  color: mat-color($mat-green, A400);
+  width: auto;
+  height: 40px;
 }
 
-app-root {
-  overflow: hidden;
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  display: flex;
-  flex-direction: column;
-
-  & main {
-    flex: 1;
-    display: flex;
-    overflow: auto;
-  }
-
-  & footer {
-    color: #ccc;
-
-    & div {
-      text-align: right;
-      padding: 4px 10px;
-      font-size: .8em;
-
-      & .left {
-        float: left;
-      }
-    }
-  }
-}
-
-.top .mat-list-item-content {
-  justify-content: center;
-}
-
-/** css for list only  - TODO: make the list as module and lazy loading  */
 mat-toolbar.toolbar {
-  height: auto;
-  min-height: 50px;
-  justify-content: space-between;
   background-color: #21212163;
 }
 
 mat-form-field textarea {
   background-color: #cccccc!important;
   color: #333!important;
-  min-height: 100px;
-  padding: 8px!important;
-  box-sizing: border-box;
-}
-
-.overflow {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  margin-right: 10px;
-}
-
-.noflex,
-.noflex>.mat-list-item-content {
-  display: block !important;
-}
-
-mat-checkbox.advanced>label>span {
-  border-bottom: dotted 1px #00e676;
-  line-height: 20px !important;
-}
-
-.mat-dialog-title {
-  margin: -6px -16px 20px !important;
-  padding: 2px 10px;
-  background-color: #2d2d2d;
-  border-radius: 2px;
-  font-size: large;
-  //box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2), 0px 6px 10px 0px rgba(0, 0, 0, 0.14), 0px 1px 18px 0px rgba(0, 0, 0, 0.12);
-}
-
-.icon-locked {
-  animation: rotate 2s infinite linear;
-}
-
-@keyframes rotate {
-  0% {
-    transform: rotate(0deg)
-  }
-
-  100% {
-    transform: rotate(360deg)
-  }
-}
-
-.mat-menu-panel {
-  max-width: none !important;
-}
-
-.snack-bar-notify {
-  max-width: 60vw !important;
-  overflow: auto;
-  background-color: #595959;
-  color: #00e676;
-
-  & button {
-    color: #78909c;
-  }
-}
-
-.snack-bar-error {
-  max-width: 60vw !important;
-  overflow: auto;
-  background-color: #595959;
-  color: #ff9800;
-
-  & button {
-    color: #78909c;
-  }
-}
-
-.mat-card-header {
-  margin-bottom: 10px;
-}
-
-.mat-card-header-text {
-  margin: 0 !important;
-}
-
-.mat-dialog-container {
-  padding: 8px 18px !important;
 }
 
 .mat-dialog-content {
-  margin: 0 -18px !important;
-  max-height: 80vh !important;
   padding-top: 2px !important;
   padding-bottom: 2px !important;
-}
-
-.mat-dialog-actions {
-  margin-bottom: auto !important;
-}
-
-.mat-card-subtitle {
-  margin-bottom: 0 !important;
-}
-
-.row {
-
-  & .star {
-    flex-basis: 20px;
-    text-align: right;
-    line-height: 60px;
-
-    &.ddn {
-      padding-top: 12px;
-    }
-  }
-}
-
-.mat-form-field,
-.full-width {
-  flex-grow: 1;
-}
-
-*:focus {
-  outline: none;
-}
-
-.job-status .mat-mini-fab .mat-button-wrapper {
-  display: inline;
-  font-size: 11px;
-}
-
-mat-sidenav {
-  width: 200px;
-  min-height: 100vh;
-}
-
-mat-header-cell.control,
-mat-cell.control {
-  flex-grow: 0;
-  flex-basis: 100px;
-  text-align: center;
-}
-
-.item-title {
-  cursor: pointer;
-
-  &:hover {
-    text-decoration: underline;
-  }
-
-  &.has-checkbox {
-    margin-left: 36px;
-  }
-}
-
-.mat-expansion-panel {
-  box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.6), 0px 2px 2px 0px rgba(2, 2, 2, 0.8), 0px 1px 5px 0px rgba(10, 10, 10, 0.9) !important;
-
-  &.panel {
-    margin: 6px 0;
-  }
-}
-
-.mat-column-controls {
-  text-align: right;
-}
-
-.mat-column-select {
-  overflow: initial;
-}
-
-.mat-list-icon {
-  color: rgba(0, 0, 0, 0.54);
-}
-
-.mat-form-field {
-  // there isn't visible underscore in the firefox
-  line-height: normal;
-}
-
-.hidden {
-  display: none !important;
-}
-
-.login-icon {
-  padding: 0 14px;
-  cursor: pointer;
-  vertical-align: text-bottom;
-}
-
-.on-center {
-  display: flex;
-  justify-content: center;
-}
-
-.controls {
-  display: flex;
-  justify-content: flex-end;
-
-  & button {
-    margin: 0 4px;
-
-    &[color="accent"]:focus {
-      border: solid 1px #008444;
-    }
-  }
-}
-
-// component for displaying some group
-
-.group {
-  background-color: #474747;
-  padding: 8px 20px 2px;
-  margin-top: 1px;
-  margin-bottom: 8px;
-  box-shadow: inset 2px 2px 5px rgba(90, 90, 90, 0.5), 1px 1px 5px #383838;
-}
-
-.component {
-  border: solid 1px #696969;
-  padding: 2px 6px;
-  margin: 8px;
-  box-shadow: 0 14px 28px rgba(41, 41, 41, 0.25), 0 10px 10px rgba(29, 29, 29, 0.22);
-}
-
-.alone>.field-group {
-  margin: 0 24px;
-}
-
-.alone>.read-only {
-  margin: 0 14px !important;
-}
-
-@font-face {
-  font-family: 'Material Icons';
-  font-style: normal;
-  font-weight: 400;
-  src: url(assets/fonts/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2) format("woff2");
-}
-
-@font-face {
-  font-family: 'Ubuntu Mono';
-  src: url("assets/fonts/UbuntuMono-Regular.eot");
-  src: local("assets/fonts/Ubuntu Mono"), local("assets/fonts/UbuntuMono-Regular"), url("assets/fonts/UbuntuMono-Regular.eot?#iefix") format("embedded-opentype"), url("assets/fonts/UbuntuMono-Regular.woff") format("woff"), url("assets/fonts/UbuntuMono-Regular.ttf") format("truetype");
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Ubuntu Mono';
-  src: url("assets/fonts/UbuntuMono-Bold.eot");
-  src: local("assets/fonts/Ubuntu Mono Bold"), local("assets/fonts/UbuntuMono-Bold"), url("assets/fonts/UbuntuMono-Bold.eot?#iefix") format("embedded-opentype"), url("assets/fonts/UbuntuMono-Bold.woff") format("woff"), url("assets/fonts/UbuntuMono-Bold.ttf") format("truetype");
-  font-weight: bold;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Ubuntu Mono';
-  src: url("assets/fonts/UbuntuMono-BoldItalic.eot");
-  src: local("assets/fonts/Ubuntu Mono Bold Italic"), local("assets/fonts/UbuntuMono-BoldItalic"), url("assets/fonts/UbuntuMono-BoldItalic.eot?#iefix") format("embedded-opentype"), url("assets/fonts/UbuntuMono-BoldItalic.woff") format("woff"), url("assets/fonts/UbuntuMono-BoldItalic.ttf") format("truetype");
-  font-weight: bold;
-  font-style: italic;
-}
-
-@font-face {
-  font-family: 'Ubuntu Mono';
-  src: url("assets/fonts/UbuntuMono-Italic.eot");
-  src: local("assets/fonts/Ubuntu Mono Italic"), local("assets/fonts/UbuntuMono-Italic"), url("assets/fonts/UbuntuMono-Italic.eot?#iefix") format("embedded-opentype"), url("assets/fonts/UbuntuMono-Italic.woff") format("woff"), url("assets/fonts/UbuntuMono-Italic.ttf") format("truetype");
-  font-weight: normal;
-  font-style: italic;
-}
-
-.material-icons {
-  font-family: 'Material Icons';
-  font-weight: normal;
-  font-style: normal;
-  font-size: 24px;
-  line-height: 1;
-  letter-spacing: normal;
-  text-transform: none;
-  display: inline-block;
-  white-space: nowrap;
-  word-wrap: normal;
-  direction: ltr;
-  font-feature-settings: 'liga';
-  -webkit-font-feature-settings: 'liga';
-  -webkit-font-smoothing: antialiased;
 }
 
 * {
@@ -396,4 +57,39 @@ mat-cell.control {
   0px 2px 2px 0px rgba(0, 0, 0, 0.14),
   0px 1px 5px 0px rgba(0, 0, 0, 0.12);
   z-index: 1100;
+}
+
+mat-header-cell.list-control, mat-cell.list-control {
+  flex-grow: 0;
+  flex-basis: 60px;
+  text-align: center;
+}
+
+.width100 {
+  flex-grow: 0;
+  flex-basis: 100px;
+}
+
+.width30pr {
+  flex-grow: 1;
+  flex-basis: 30%;
+  width: 100px
+}
+
+/* BEGIN: Material header arrow crutch */
+.mat-header-cell .mat-sort-header-container.mat-sort-header-sorted .mat-sort-header-arrow {
+  opacity: 1 !important;
+}
+/* END: Material header arrow crutch */
+
+mat-cell {
+  padding: 0 2px;
+}
+
+mat-header-cell {
+  padding: 0 2px;
+}
+
+.expandedRow {
+  min-height: 0;
 }
