Host provider concerns. Some bugs were fixed

--- a/web/src/app/components/concern/concern-item/concern-item.component.html
+++ b/web/src/app/components/concern/concern-item/concern-item.component.html
@@ -31,5 +31,12 @@
   >
     {{placeholder.name}}
   </a>
+  <a
+    *ngSwitchCase="IMPlaceholderItemType.HostProvider"
+    [routerLink]="['/provider', placeholder.ids.provider, 'main']"
+    class="issue"
+  >
+    {{placeholder.name}}
+  </a>
   <a *ngSwitchDefault routerLink="/" class="issue">{{placeholder.name}}</a>
 </ng-container>
