--- a/web/src/app/components/actions-button/actions-button.component.html
+++ b/web/src/app/components/actions-button/actions-button.component.html
@@ -1,6 +1,7 @@
 <app-concern-list-ref
   *ngIf="row?.concerns?.length; else actions"
   [concerns]="row?.concerns"
+  (mouseenter)="onMouseenter.emit(row)"
 ></app-concern-list-ref>
 
 <ng-template #actions>
