--- a/web/src/app/shared/configuration/main/config.component.html
+++ b/web/src/app/shared/configuration/main/config.component.html
@@ -14,7 +14,7 @@
 </div>
 
 <div class="fields" [@history]="historyShow ? 'show' : 'hide'">
-  <app-config-fields #fls [model]="rawConfig | async" [attributes]="attributes"
+  <app-config-fields #fls [model]="rawConfig | async"
                      (event)="onReady()"></app-config-fields>
 </div>
 
