ADCM-2064 Action pages were deleted. Navigation into host and hostprovider.

--- a/web/src/app/components/actions-button/actions-button.component.html
+++ b/web/src/app/components/actions-button/actions-button.component.html
@@ -1,5 +1,5 @@
 <app-concern-list-ref
-  *ngIf="row?.concerns?.length; else actions"
+  *ngIf="row?.locked; else actions"
   [concerns]="row?.concerns"
   (mouseenter)="onMouseenter.emit(row)"
 ></app-concern-list-ref>
