--- a/web/src/app/shared/configuration/field/field.component.html
+++ b/web/src/app/shared/configuration/field/field.component.html
@@ -1,41 +1,40 @@
-<ng-container *ngIf="!options.hidden">
-  <div class="field w100" [appForTest]="getTestName()"
-       [ngClass]="{'read-only': options.read_only, advanced: isAdvanced() }">
-    <label [appTooltip]="options.display_name" [appTooltipShowByCondition]="true">{{ options.display_name }}:</label>
+<div class="field w100" [appForTest]="getTestName()"
+     [ngClass]="{'read-only': options.read_only, advanced: isAdvanced() }">
+  <label [appTooltip]="options.display_name" [appTooltipShowByCondition]="true">{{ options.display_name }}:</label>
 
-    <ng-container [ngSwitch]="options.controlType">
-      <ng-container *ngSwitchCase="'structure'">
-        <app-scheme [field]="options" [form]="currentFormGroup" #cc></app-scheme>
-      </ng-container>
-      <ng-container *ngSwitchCase="'map'">
-        <app-fields-map [field]="options" [form]="currentFormGroup" #cc></app-fields-map>
-      </ng-container>
-      <ng-container *ngSwitchCase="'list'">
-        <app-fields-list [field]="options" [form]="currentFormGroup" #cc></app-fields-list>
-      </ng-container>
-      <ng-container *ngSwitchCase="'password'">
-        <app-fields-password [field]="options" [form]="currentFormGroup"></app-fields-password>
-      </ng-container>
-      <ng-container *ngSwitchCase="'boolean'">
-        <app-fields-boolean [field]="options" [form]="currentFormGroup"></app-fields-boolean>
-      </ng-container>
-      <ng-container *ngSwitchCase="'textbox'">
-        <app-fields-textbox [field]="options" [form]="currentFormGroup"></app-fields-textbox>
-      </ng-container>
-      <ng-container *ngSwitchCase="'textarea'">
-        <app-fields-textarea [field]="options" [form]="currentFormGroup"></app-fields-textarea>
-      </ng-container>
-      <ng-container *ngSwitchCase="'json'">
-        <app-fields-json [field]="options" [form]="currentFormGroup"></app-fields-json>
-      </ng-container>
-      <ng-container *ngSwitchCase="'option'">
-        <app-fields-dropdown [field]="options" [form]="currentFormGroup"></app-fields-dropdown>
-      </ng-container>
-      <ng-container *ngSwitchCase="'variant'">
-        <app-fields-variant [field]="options" [form]="currentFormGroup"></app-fields-variant>
-      </ng-container>
+  <ng-container [ngSwitch]="options.controlType">
+    <ng-container *ngSwitchCase="'structure'">
+      <app-scheme [field]="options" [form]="currentFormGroup" #cc></app-scheme>
+    </ng-container>
+    <ng-container *ngSwitchCase="'map'">
+      <app-fields-map [field]="options" [form]="currentFormGroup" #cc></app-fields-map>
+    </ng-container>
+    <ng-container *ngSwitchCase="'list'">
+      <app-fields-list [field]="options" [form]="currentFormGroup" #cc></app-fields-list>
+    </ng-container>
+    <ng-container *ngSwitchCase="'password'">
+      <app-fields-password [field]="options" [form]="currentFormGroup"></app-fields-password>
+    </ng-container>
+    <ng-container *ngSwitchCase="'boolean'">
+      <app-fields-boolean [field]="options" [form]="currentFormGroup"></app-fields-boolean>
+    </ng-container>
+    <ng-container *ngSwitchCase="'textbox'">
+      <app-fields-textbox [field]="options" [form]="currentFormGroup"></app-fields-textbox>
+    </ng-container>
+    <ng-container *ngSwitchCase="'textarea'">
+      <app-fields-textarea [field]="options" [form]="currentFormGroup"></app-fields-textarea>
+    </ng-container>
+    <ng-container *ngSwitchCase="'json'">
+      <app-fields-json [field]="options" [form]="currentFormGroup"></app-fields-json>
+    </ng-container>
+    <ng-container *ngSwitchCase="'option'">
+      <app-fields-dropdown [field]="options" [form]="currentFormGroup"></app-fields-dropdown>
+    </ng-container>
+    <ng-container *ngSwitchCase="'variant'">
+      <app-fields-variant [field]="options" [form]="currentFormGroup"></app-fields-variant>
+    </ng-container>
 
-      <span class="info" style="align-self: baseline;">
+    <span class="info">
       <mat-icon *ngIf="options.description" style="vertical-align: middle;" [ngClass]="'info-icon'"
                 matTooltipClass="info-tooltip" [matTooltip]="options.description">info_outline</mat-icon>
       <button (click)="restore()" [disabled]="options.read_only" mat-icon-button matSuffix color="primary"
@@ -43,15 +42,14 @@
         <mat-icon>refresh</mat-icon>
       </button>
     </span>
-    </ng-container>
-  </div>
-  <mat-list class="compare-list-container" dense *ngIf="!options.hidden && options.compare.length">
-    <mat-list-item *ngFor="let item of options.compare" class="compare-list">
-      <mat-icon matListIcon [style.backgroundColor]="item.color">more_vert</mat-icon>
-      <span class="label">
+  </ng-container>
+</div>
+<mat-list class="compare-list-container" dense *ngIf="!options.hidden && options.compare.length">
+  <mat-list-item *ngFor="let item of options.compare" class="compare-list">
+    <mat-icon matListIcon [style.backgroundColor]="item.color">more_vert</mat-icon>
+    <span class="label">
       {{ item.date | date: 'short' }}
     </span>&nbsp;----&nbsp;&nbsp;<span [appTooltip]="outputValue(item.value)"
                                        class="accent">{{ outputValue(item.value, true) }}</span>
-    </mat-list-item>
-  </mat-list>
-</ng-container>
+  </mat-list-item>
+</mat-list>
