[ADCM-2107] fixed config history UI error

--- a/web/src/app/shared/configuration/field/field.component.scss
+++ b/web/src/app/shared/configuration/field/field.component.scss
@@ -1,4 +1,5 @@
 :host {
+  flex-wrap: wrap;
 
   .field {
     display: flex;
@@ -55,4 +56,9 @@
       vertical-align: middle;
     }
   }
+}
+
+.break {
+  flex-basis: 100%;
+  height: 0;
 }
