[ADCM-2153] fix error when list values duplicate

--- a/web/src/app/shared/configuration/main/config.component.scss
+++ b/web/src/app/shared/configuration/main/config.component.scss
@@ -1,6 +1,12 @@
 :host {
   flex: 1;
   position: relative;
+
+  ::ng-deep {
+    .mat-form-field-infix {
+      display: flex;
+    }
+  }
 }
 
 .na-hu {
