[ADCM-2225] If checkbox is not selected, then there is no way to change value

--- a/web/src/app/shared/form-elements/secret-text/secret-text.component.html
+++ b/web/src/app/shared/form-elements/secret-text/secret-text.component.html
@@ -4,11 +4,11 @@
               (blur)="onBlur()"
               (focus)="onFocus()"
               [appMTextarea]="field.key"
-              [formControl]="control"
+              [formControl]="dummyControl"
               [readonly]="field.read_only"
     >
 
     </textarea>
-    <mat-error *ngIf="!isValid"><app-error-info [field]="field" [control]="control"></app-error-info></mat-error>
+    <mat-error *ngIf="!isValid"><app-error-info [field]="field" [control]="dummyControl"></app-error-info></mat-error>
   </mat-form-field>
 </ng-container>
