Entity detail components. Some entity services. Legacy detail component with its dependencies has been deleted.

--- a/web/src/app/templates/details.html
+++ b/web/src/app/templates/details.html
@@ -9,7 +9,7 @@
 
 <mat-drawer-container [style.flex]="1" autosize>
   <mat-drawer disableClose="true" mode="side" opened>
-    <app-left-menu [leftMenu]="leftMenu"></app-left-menu>
+    <app-left-menu [leftMenu]="leftMenu" [entity]="entity"></app-left-menu>
   </mat-drawer>
   <mat-drawer-content [style.display]="'flex'">
     <mat-card>
