[ADCM-2225] If checkbox is not selected, then there is no way to restore value

--- a/web/src/app/shared/configuration/field/field.component.html
+++ b/web/src/app/shared/configuration/field/field.component.html
@@ -40,7 +40,8 @@
     <span class="info">
       <mat-icon *ngIf="options.description" style="vertical-align: middle;" [ngClass]="'info-icon'"
                 matTooltipClass="info-tooltip" [matTooltip]="options.description">info_outline</mat-icon>
-      <button (click)="restore()" [disabled]="options.read_only" mat-icon-button matSuffix color="primary"
+      <button (click)="restore()" [disabled]="options.read_only || disabled" mat-icon-button matSuffix
+              color="primary"
               matTooltip="Reset to default">
         <mat-icon>refresh</mat-icon>
       </button>
