[ADCM-2225] disabled state for password & confirm password

--- a/web/src/app/shared/form-elements/password/password.component.html
+++ b/web/src/app/shared/form-elements/password/password.component.html
@@ -1,9 +1,21 @@
 <div [ngStyle]="{ display: isHideDummy ? 'none' : 'flex' }">
   <mat-form-field>
-    <input matInput type="password" (focus)="hideDummy(false)" [value]="dummy" [readonly]="field.read_only" />
+    <input matInput
+           type="password"
+           (focus)="hideDummy(false)"
+           [value]="dummy"
+           [readonly]="field.read_only"
+           [disabled]="control.disabled"
+    >
   </mat-form-field>
   <mat-form-field *ngIf="ConfirmPasswordField">
-    <input matInput type="password" (focus)="hideDummy(true)" [value]="dummy" [readonly]="field.read_only" />
+    <input matInput
+           type="password"
+           (focus)="hideDummy(true)"
+           [value]="dummy"
+           [readonly]="field.read_only"
+           [disabled]="control.disabled"
+    >
   </mat-form-field>
 </div>
 
