ADCM-1957 Cluster statuses, host statuses.

--- a/web/src/app/components/host/host-status/host-status.component.html
+++ b/web/src/app/components/host/host-status/host-status.component.html
@@ -9,7 +9,7 @@
   </div>
 
   <app-status-tree
-    [tree]="statusTree | async | clusterStatusToStatusTree"
+    [tree]="statusTree | async | hostStatusToStatusTree"
     [folding]="folding"
     #tree
   ></app-status-tree>
