ADCM-1957 Cluster status page refactored

--- a/web/src/app/templates/status-tree.html
+++ b/web/src/app/templates/status-tree.html
@@ -9,7 +9,7 @@
   </div>
 
   <app-status-tree
-    [tree]="statusTree | async | hostStatusToStatusTree"
+    [tree]="statusTree | async | entityStatusToStatusTree : entityService"
     [folding]="folding"
     #tree
   ></app-status-tree>
