--- a/web/src/app/templates/status-tree.html
+++ b/web/src/app/templates/status-tree.html
@@ -9,7 +9,7 @@
   </div>
 
   <app-status-tree
-    [tree]="statusTree | async | entityStatusToStatusTree : entityService"
+    [tree]="statusTree | async | entityStatusToStatusTree : entityService : pipeData()"
     [folding]="folding"
     #tree
   ></app-status-tree>
