PR-2239 added adwp-input-select

--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -32,7 +32,7 @@ body {
   background-color: #303030;
 }
 
-app-root {
+app-root adwp-portal-host > .content {
   overflow: hidden;
   position: fixed;
   top: 0;
