--- a/web/src/app/components/rbac/user/rbac-user.component.html
+++ b/web/src/app/components/rbac/user/rbac-user.component.html
@@ -1,9 +1,12 @@
-<ng-container [formGroup]="form">
-  <adwp-input [form]="form" label='User name' controlName='userName'></adwp-input>
+<form [formGroup]="form">
+  <adwp-input [form]="form" label='User name' controlName='username'></adwp-input>
   <adwp-input [form]="form" label='Password' controlName='password' type="password"></adwp-input>
-  <adwp-input [form]="form" label='First name' controlName='firstName'></adwp-input>
-  <adwp-input [form]="form" label='Last name' controlName='lastName'></adwp-input>
+  <adwp-input [form]="form" label='First name' controlName='first_name'></adwp-input>
+  <adwp-input [form]="form" label='Last name' controlName='last_name'></adwp-input>
   <adwp-input [form]="form" label='Email' controlName='email'></adwp-input>
-  <adwp-input-select [form]="form" label="Select groups" controlName="groups" [options]="options"></adwp-input-select>
-  <adwp-controls [disabled]="!form.valid" (cancel)="onCancel()" (save)="save()"></adwp-controls>
-</ng-container>
+  <adwp-input-select [form]="form" label="Select groups" controlName="group" labelKey="name"
+                     appRbacGroupsAsOptions
+                     #groups="rbacGroups"
+                     [options]="groups.options$ | async"></adwp-input-select>
+  <adwp-controls [title]="title" [disabled]="!form.valid" (cancel)="onCancel()" (save)="save()"></adwp-controls>
+</form>
