--- a/web/src/app/admin/groups/groups.component.html
+++ b/web/src/app/admin/groups/groups.component.html
@@ -1,3 +1,6 @@
+<app-add-button class="add-button" [name]="type" [component]="component">
+  Create {{ type }}</app-add-button>
+
 <adwp-list
   [columns]="listColumns"
   [dataSource]="data$ | async"
