--- a/web/src/app/admin/roles/roles.component.html
+++ b/web/src/app/admin/roles/roles.component.html
@@ -1,3 +1,6 @@
+<!--<app-add-button class="add-button" [name]="type" [component]="component" (added)="current = $event">-->
+<!--  Create {{ type }}</app-add-button>-->
+
 <adwp-list
   [columns]="listColumns"
   [dataSource]="data$ | async"
