--- a/web/src/app/admin/users/users.component.html
+++ b/web/src/app/admin/users/users.component.html
@@ -1,6 +1,7 @@
 <div class="controls">
-  <app-add-button class="add-button" [name]="type" [component]="component" (added)="current = $event">
-    Create {{ type }}</app-add-button>
+  <app-add-button class="add-button">
+    Create {{ type }}
+  </app-add-button>
   <button mat-raised-button color="primary" (click)="deleteEntities()" [disabled]="!(data$ | async | hasSelected)">
     <mat-icon>delete</mat-icon>
     Delete
