--- a/web/src/app/components/rbac/group-form/rbac-group-form.component.html
+++ b/web/src/app/components/rbac/group-form/rbac-group-form.component.html
@@ -1,7 +1,7 @@
 <ng-container [formGroup]="form">
   <adwp-input [form]="form" label='Group name' controlName='name'></adwp-input>
   <adwp-input [form]="form" label='Description' controlName='description'></adwp-input>
-  <adwp-input-select [form]="form" label="Select users" controlName="user" labelKey="username"
+  <adwp-input-select [form]="form" label="Select users" controlName="user" [handler]="users.label"
                      appRbacUsersAsOptions
                      #users="rbacUsers"
                      [options]="users.options$ | async"></adwp-input-select>
