--- a/web/src/app/admin/roles/roles.component.html
+++ b/web/src/app/admin/roles/roles.component.html
@@ -1,6 +1,10 @@
 <div class="controls">
+  <app-add-button class="add-button">
+    Create {{ type }}
+  </app-add-button>
   <button mat-raised-button color="primary" (click)="deleteEntities()" [disabled]="!(data$ | async | hasSelected)">
-    <mat-icon>delete</mat-icon> Delete
+    <mat-icon>delete</mat-icon>
+    Delete
   </button>
 </div>
 
