--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -24,40 +24,59 @@ $spacer: 1rem !default;
 
 @import "./assets/scss/grid";
 
-body {
-  margin: 0;
-  padding: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
-  color: #ffffff;
-  background-color: #303030;
+html, body {
+  height: 100%;
 }
 
-app-root adwp-portal-host > .content {
-  overflow: hidden;
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
+body {
   display: flex;
-  flex-direction: column;
+  flex: 1;
+  min-height: 100%;
+  overflow-x: hidden;
+  margin: 0;
+  padding: 0;
+  color: #ffffff;
+  background-color: #303030;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
 
-  & main {
+app-root {
+  display: flex;
+  flex: 1;
+  position: relative;
+
+  adwp-portal-host {
+    display: flex !important;
     flex: 1;
-    display: flex;
-    overflow: auto;
   }
 
-  & footer {
-    color: #ccc;
+  adwp-portal-host > .content {
+    overflow: hidden;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    flex-direction: column;
 
-    & div {
-      text-align: right;
-      padding: 4px 10px;
-      font-size: .8em;
+    & main {
+      flex: 1;
+      display: flex;
+      overflow: auto;
+    }
 
-      & .left {
-        float: left;
+    & footer {
+      color: #ccc;
+
+      & div {
+        text-align: right;
+        padding: 4px 10px;
+        font-size: .8em;
+
+        & .left {
+          float: left;
+        }
       }
     }
   }
