ADCM-2270 it is fix improves the select button  at permissions form and the filter for selected permissions

--- a/web/src/app/components/rbac/permission-form/rbac-permission-form.component.html
+++ b/web/src/app/components/rbac/permission-form/rbac-permission-form.component.html
@@ -23,7 +23,9 @@
     ></adwp-selection-list>
 
     <div class="adcm-rbac-permission__actions">
-      <button mat-flat-button color="accent" [disabled]="!optionList.options?.length" (click)="save()">Select</button>
+      <button mat-flat-button color="accent" [disabled]="!optionList.list?.selectedOptions.selected.length"
+              (click)="save()">Select
+      </button>
     </div>
   </div>
 </div>
